Add meta data to head and link css stylesheet

--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>play-eternal</title>
+    <meta name="description" content="Play Eternal sensory play information and activities for parents of young children">
+    <meta name="keywords" content="sensory play, childhood development, sensory play activities, sensory play for anxiety">
+    <link rel="stylesheet" href="assets/css/stylesheet.css">
+    <title>Play Eternal</title>
 </head>
 <body>
     <h1>Hello</h1>
