Add html semantic structure for index page

--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <title>Play Eternal</title>
 </head>
 <body>
-    <h1>Hello</h1>
+    <header>Header</header>
+    <section>Hero Image</section>
+    <footer>Footer</footer>
 </body>
 </html>
