Add header logo and nav content and add default style to body. Add google fonts and font awesome script.

--- a/index.html
+++ b/index.html
@@ -10,8 +10,22 @@
     <title>Play Eternal</title>
 </head>
 <body>
-    <header>Header</header>
+    <header id="header">
+        <h1><a href="index.html">Play Eternal</a> <i class="fas fa-hand-holding-heart"></i></h1>
+        <nav>
+            <div>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="#">All About Sensory Play</a></li>
+                    <li><a href="#">Hear From Each Other</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
     <section>Hero Image</section>
     <footer>Footer</footer>
+<!-- font awesome script-->
+<script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
 </body>
 </html>
