--- a/index.html
+++ b/index.html
@@ -10,17 +10,15 @@
     <title>Play Eternal</title>
 </head>
 <body>
-    <header id="header">
-        <h1><a href="index.html">Play Eternal</a> <i class="fas fa-hand-holding-heart"></i></h1>
-        <nav>
-            <div>
+    <header>
+        <h1 id="logo"><a href="index.html">Play Eternal</a> <i class="fas fa-hand-holding-heart"></i></h1>
+        <nav id="menu"> 
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="#">All About Sensory Play</a></li>
                     <li><a href="#">Hear From Each Other</a></li>
                     <li><a href="#">Contact Us</a></li>
                 </ul>
-            </div>
         </nav>
     </header>
     <section>Hero Image</section>
