--- a/index.html
+++ b/index.html
@@ -1,29 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Play Eternal sensory play information and activities for parents of young children">
-    <meta name="keywords" content="sensory play, childhood development, sensory play activities, sensory play for anxiety">
+    <meta name="description"
+        content="Play Eternal sensory play information and activities for parents of young children">
+    <meta name="keywords"
+        content="sensory play, childhood development, sensory play activities, sensory play for anxiety">
     <link rel="stylesheet" href="assets/css/stylesheet.css">
     <title>Play Eternal</title>
 </head>
+
 <body>
     <header>
-        <h1 id="logo"><a href="index.html">Play Eternal</a> <i class="fas fa-hand-holding-heart"></i></h1>
-        <nav id="menu"> 
-                <ul>
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="#">All About Sensory Play</a></li>
-                    <li><a href="#">Hear From Each Other</a></li>
-                    <li><a href="#">Contact Us</a></li>
-                </ul>
+        <h1 id="logo"><a href="index.html">Play Eternal <i class="fas fa-hand-holding-heart"></i></a></h1>
+        <nav id="menu">
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">All About Sensory Play</a></li>
+                <li><a href="#">Hear From Each Other</a></li>
+                <li><a href="#">Contact Us</a></li>
+            </ul>
         </nav>
     </header>
     <section>Hero Image</section>
     <footer>Footer</footer>
-<!-- font awesome script-->
-<script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
+    <!-- font awesome script-->
+    <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
 </body>
+
 </html>
