Add hero image to home page and style. Add html text content

--- a/index.html
+++ b/index.html
@@ -25,7 +25,22 @@
             </ul>
         </nav>
     </header>
-    <section>Hero Image</section>
+    <section>
+        <div id="hero-home"></div>
+        <div>
+            <h1>Help your child through play</h1>
+            <p>So many children are overwhelmed by the amount 
+                and variation of sensory stimuli in our everyday
+                environments.
+                
+                By introducing some simple play time with your child
+                you can help them meet their developmental goals
+                as well as cope with any negative emotions they may
+                be experiencing. Most of all they will have fun!</p>
+            <h3>What can I do as a parent?</h3>
+            <span><i class="fas fa-arrow-circle-right"></i> <button>Learn More</button>
+            </span>
+        </div>
     <footer>Footer</footer>
     <!-- font awesome script-->
     <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
