--- a/index.html
+++ b/index.html
@@ -26,21 +26,26 @@
         </nav>
     </header>
     <section>
-        <div id="hero-home"></div>
-        <div>
-            <h1>Help your child through play</h1>
-            <p>So many children are overwhelmed by the amount 
+        <div id="hero-area">
+            <div id="hero-text">
+            <h2 class="text-area">Help your child through play</h2>
+            <br>
+            <p class="text-area"> So many children are overwhelmed by the amount 
                 and variation of sensory stimuli in our everyday
-                environments.
-                
+                environments.</p>
+                <br>
+                <p class="text-area">
                 By introducing some simple play time with your child
                 you can help them meet their developmental goals
                 as well as cope with any negative emotions they may
                 be experiencing. Most of all they will have fun!</p>
-            <h3>What can I do as a parent?</h3>
-            <span><i class="fas fa-arrow-circle-right"></i> <button>Learn More</button>
-            </span>
+                <br>
+            <h3 class="text-area">What can I do as a parent?</h3>
+            <br>
+            <span class="text-area"><i class="fas fa-arrow-circle-right"></i></span><button><a href="index.html">Learn More</a></button>
+            
         </div>
+    </div>
     <footer>Footer</footer>
     <!-- font awesome script-->
     <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
