Add footer and footer styling. Create about contact and feedback pages and duplicate header and footer across

--- a/about.html
+++ b/about.html
@@ -26,27 +26,7 @@
         </nav>
     </header>
     <section>
-        <div id="hero-area">
-            <div id="hero-text">
-                <h2 class="text-area">Help your child through play</h2>
-                <br>
-                <p class="text-area"> So many children are overwhelmed by the amount
-                    and variation of sensory stimuli in our everyday
-                    environments.</p>
-                <br>
-                <p class="text-area">
-                    By introducing some simple play time with your child
-                    you can help them meet their developmental goals
-                    as well as cope with any negative emotions they may
-                    be experiencing. Most of all they will have fun!</p>
-                <br>
-                <h3 class="text-area">What can I do as a parent?</h3>
-                <br>
-                <span class="text-area"><i class="fas fa-arrow-circle-right"></i></span><button><a
-                        href="about.html">Learn More</a></button>
-
-            </div>
-        </div>
+        <h1>All About Sensory Play</h1>
     </section>
     <footer>
         <div id="footer-logo">
