--- a/contact.html
+++ b/contact.html
@@ -26,27 +26,7 @@
         </nav>
     </header>
     <section>
-        <div id="hero-area">
-            <div id="hero-text">
-                <h2 class="text-area">Help your child through play</h2>
-                <br>
-                <p class="text-area"> So many children are overwhelmed by the amount
-                    and variation of sensory stimuli in our everyday
-                    environments.</p>
-                <br>
-                <p class="text-area">
-                    By introducing some simple play time with your child
-                    you can help them meet their developmental goals
-                    as well as cope with any negative emotions they may
-                    be experiencing. Most of all they will have fun!</p>
-                <br>
-                <h3 class="text-area">What can I do as a parent?</h3>
-                <br>
-                <span class="text-area"><i class="fas fa-arrow-circle-right"></i></span><button><a
-                        href="about.html">Learn More</a></button>
-
-            </div>
-        </div>
+        <h1> Contact Us</h1>
     </section>
     <footer>
         <div id="footer-logo">
@@ -62,7 +42,6 @@
             <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a></li>
             <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
         </ul>
-
     </footer>
     <!-- font awesome script-->
     <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
