Add shadow when hover to button, re-format button

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <br>
                 <h3 class="text-area">What can I do as a parent?</h3>
                 <br>
-                <span class="text-area"><i class="fas fa-arrow-circle-right"></i></span><button><a
+               <button class="text-area"><a
                         href="about.html">Learn More</a></button>
 
             </div>
