Add dropdown menu to navigation for about page

--- a/about.html
+++ b/about.html
@@ -19,14 +19,30 @@
         <nav id="menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">All About Sensory Play</a></li>
+                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">All About Sensory Play</a>
+                    <div class="dropdown-content">
+                        <a href="#">Help with Anxiety</a>
+                        <a href="#">Activities</a>
+                        <a href="#">Play in Motion</a>
+                        <a href="#">What is Sensory Play?</a></div>
+                </li>
                 <li><a href="feedback.html">Hear From Each Other</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
         </nav>
     </header>
     <section>
-        <h1>All About Sensory Play</h1>
+        <div id="about-menu">
+            <h1>All About Sensory Play</h1>
+            <nav id="sub-menu">
+                <ul>
+                    <li><a href="#">What is Sensory Play?</a></li>
+                    <li><a href="#">Play in Motion</a></li>
+                    <li><a href="#">Activities</a></li>
+                    <li><a href="#">Help with Anxiety</a></li>
+                </ul>
+            </nav>
+        </div>
     </section>
     <footer>
         <div id="footer-logo">
