--- a/index.html
+++ b/index.html
@@ -19,7 +19,13 @@
         <nav id="menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">All About Sensory Play</a></li>
+                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">All About Sensory Play</a>
+                    <div class="dropdown-content">
+                        <a href="#">Help with Anxiety</a>
+                        <a href="#">Activities</a>
+                        <a href="#">Play in Motion</a>
+                        <a href="#">What is Sensory Play?</a></div>
+                </li>
                 <li><a href="feedback.html">Hear From Each Other</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
             </ul>
@@ -42,8 +48,7 @@
                 <br>
                 <h3 class="text-area">What can I do as a parent?</h3>
                 <br>
-               <button class="text-area"><a
-                        href="about.html">Learn More</a></button>
+                <button class="text-area"><a href="about.html">Learn More</a></button>
 
             </div>
         </div>
