Add All About Sensory Play content and styling

--- a/about.html
+++ b/about.html
@@ -15,16 +15,16 @@
 
 <body>
     <header>
-        <h1 id="logo"><a href="index.html">Play Eternal <i class="fas fa-hand-holding-heart"></i></a></h1>
+        <h1 id="logo"><a href="index.html">Play Eternal <i class="fas fa-hand-holding-heart" aria-hidden="true"></i></a></h1>
         <nav id="menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">All About Sensory Play</a>
                     <div class="dropdown-content">
-                        <a href="#">Help with Anxiety</a>
-                        <a href="#">Activities</a>
-                        <a href="#">Play in Motion</a>
-                        <a href="#">What is Sensory Play?</a></div>
+                        <a href="about.html#sec4">Help with Anxiety</a>
+                        <a href="about.html#sec3">Activities</a>
+                        <a href="about.html#sec2">Play in Motion</a>
+                        <a href="about.html#sec1">What is Sensory Play?</a></div>
                 </li>
                 <li><a href="feedback.html">Hear From Each Other</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
@@ -36,17 +36,97 @@
             <h1>All About Sensory Play</h1>
             <nav id="sub-menu">
                 <ul>
-                    <li><a href="#">What is Sensory Play?</a></li>
-                    <li><a href="#">Play in Motion</a></li>
-                    <li><a href="#">Activities</a></li>
-                    <li><a href="#">Help with Anxiety</a></li>
+                    <li><a href="#sec1">What is Sensory Play?</a></li>
+                    <li><a href="#sec2">Play in Motion</a></li>
+                    <li><a href="#sec3">Activities</a></li>
+                    <li><a href="#sec4">Help with Anxiety</a></li>
                 </ul>
             </nav>
         </div>
     </section>
+    <section>
+        <h2 id="sec1" class="sections-headers">What is Sensory Play?</h2>
+        <div class="solid-orange">
+            <p>
+                Sensory play includes activities that stimulate children’s senses such as sight, sound, smell, taste or
+                touch. By providing this type of activity children will learn more about the world around them in a
+                natural way, through their senses. Such activities contribute to brain development by stimulating the
+                neurons in the brain to make connections, and help with development in all areas of learning.
+            </p>
+        </div>
+        <h3 id="sight">Sight <i class="far fa-eye" aria-hidden="true"></i> </h3>
+        <div class="solid-blue">
+            <img src="./assets/images/play_by_sight.jpg" alt="a young girl and her grandmother circling their eyes with their hands like glasses" class="square_image play_by_pic">
+            <p class="right-align">
+                The most commonly stimulated sense for young children is sight. From birth, babies are given brightly
+                coloured and patterned toys to look at and play with.
+
+                Exposing young children to new and interesting experiences will keep them curious about the world around
+                them. Visually stimulating activities will enable children to use the sense of sight to discover
+                colours, shapes, brightness, form and structure. They will discover how things move and develop a visual
+                memory as to how things work.</p>
+        </div>
+        <h3 id="sound">Sound <i class="fas fa-assistive-listening-systems" aria-hidden="true"></i></h3>
+        <div class="solid-pink">
+            <img src="./assets/images/play_by_sound.jpg" alt="a young girl holding up a home made tin and string phone to her ear" class="square_image play_by_pic">
+            <p class="left-align">
+
+
+                Many toys for young children feature music and other various sounds. Music is extremely important for
+                children and many learn best when a concept is set to music. Music can encourage motor skills
+                development as children learn to dance and to keep a beat. Singing songs, listening to stories and
+                talking about what they are doing all help children with sound and listening skills. Wind chimes, music
+                boxes, shakers, objects to bang and music to listen and move to will all enhance this area of learning
+                and development.</p>
+        </div>
+        <h3 id="smell">Smell <i class="fas fa-bacon" aria-hidden="true"></i></h3>
+        <div class="solid-grey">
+            <img src="./assets/images/play_by_smell.jpg" alt="a young girl smelling a flower" class="square_image play_by_pic">
+            <p class="right-align">
+
+
+                The sense of smell helps children to identify scents they like or don’t like and can be incorporated
+                into planning in many ways. Try adding an array of fragrances into your treasure box, such as coffee,
+                mint, lemon and lavender. Providing these different smells allows the children to differentiate between
+                new scents and build on their learning through their sense of smell.</p>
+        </div>
+        <h3 id="touch">Touch <i class="fas fa-hand-sparkles" aria-hidden="true"></i></h3>
+        <div class="solid-green">
+            <img src="./assets/images/play_by_touch.jpg" alt="a young girl playing with a bead and metal toy" class="square_image play_by_pic">
+            <p class="left-align">
+
+
+                The sense of touch can be best explored through textures and messy play. Young babies like to snuggle in
+                with soft blankets and investigate treasure baskets, older babies and toddlers will enjoy messy play
+                activities to explore new textures. Going on a ‘touch’ walk will encourage children to touch new items
+                for texture such as rough and smooth, wet puddles, tree bark and some plants.</p>
+        </div>
+        <h3 id="taste">Taste <i class="fas fa-grin-tongue" aria-hidden="true"></i></h3>
+        <div class="solid-peach">
+            <img src="./assets/images/play_with_mum.jpg" alt="a young mum and her daughter sorting through drinking cups" class="square_image play_by_pic">
+            <p class="right-align">
+
+
+                Through the sense of taste children will get to explore new foods, fruits and vegetables and decide
+                which ones they like and do not like. Finger foods are a good way to encourage independence for toddlers
+                so that they can feed themselves. Cooking activities will encourage children to join in the process of
+                making meals and treats. They are more likely to try new things if they are involved in making and
+                preparing them.</p>
+        </div>
+
+    </section>
+    <section>
+        <h2 id="sec2" class="sections-headers">Play in Motion</h2>
+    </section>
+    <section>
+        <h2 id="sec3" class="sections-headers">Activities</h2>
+    </section>
+    <section>
+        <h2 id="sec4" class="sections-headers">Help with Anxiety</h2>
+    </section>
     <footer>
         <div id="footer-logo">
-            <a href="index.html"><i class="fas fa-hand-holding-heart"></i>
+            <a href="index.html"><i class="fas fa-hand-holding-heart" aria-hidden="true"></i>
                 <h6>Play Eternal</h6>
             </a>
             <br>
@@ -54,9 +134,9 @@
         </div>
 
         <ul>
-            <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a></li>
-            <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square" aria-hidden="true"></i></a></li>
+            <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square" aria-hidden="true"></i></a></li>
         </ul>
 
     </footer>
