--- a/feedback.html
+++ b/feedback.html
@@ -21,10 +21,10 @@
                 <li><a href="index.html">Home</a></li>
                 <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">All About Sensory Play</a>
                     <div class="dropdown-content">
-                        <a href="#">Help with Anxiety</a>
-                        <a href="#">Activities</a>
-                        <a href="#">Play in Motion</a>
-                        <a href="#">What is Sensory Play?</a></div>
+                        <a href="about.html#sec4">Help with Anxiety</a>
+                        <a href="about.html#sec3">Activities</a>
+                        <a href="about.html#sec2">Play in Motion</a>
+                        <a href="about.html#sec1">What is Sensory Play?</a></div>
                 </li>
                 <li><a href="feedback.html">Hear From Each Other</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
