Add sensory play in motion iframe and restyle nav dropdown menu to inline block

--- a/about.html
+++ b/about.html
@@ -15,16 +15,19 @@
 
 <body>
     <header>
-        <h1 id="logo"><a href="index.html">Play Eternal <i class="fas fa-hand-holding-heart" aria-hidden="true"></i></a></h1>
+        <h1 id="logo"><a href="index.html">Play Eternal <i class="fas fa-hand-holding-heart" aria-hidden="true"></i></a>
+        </h1>
         <nav id="menu">
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">All About Sensory Play</a>
                     <div class="dropdown-content">
-                        <a href="about.html#sec4">Help with Anxiety</a>
-                        <a href="about.html#sec3">Activities</a>
+                        <a href="about.html#sec1">What is Sensory Play?</a>
                         <a href="about.html#sec2">Play in Motion</a>
-                        <a href="about.html#sec1">What is Sensory Play?</a></div>
+                        <a href="about.html#sec3">Activities</a>
+                        <a href="about.html#sec4">Help with Anxiety</a>
+                    </div>
+
                 </li>
                 <li><a href="feedback.html">Hear From Each Other</a></li>
                 <li><a href="contact.html">Contact Us</a></li>
@@ -56,7 +59,9 @@
         </div>
         <h3 id="sight">Sight <i class="far fa-eye" aria-hidden="true"></i> </h3>
         <div class="solid-blue">
-            <img src="./assets/images/play_by_sight.jpg" alt="a young girl and her grandmother circling their eyes with their hands like glasses" class="square_image play_by_pic">
+            <img src="./assets/images/play_by_sight.jpg"
+                alt="a young girl and her grandmother circling their eyes with their hands like glasses"
+                class="square_image play_by_pic">
             <p class="right-align">
                 The most commonly stimulated sense for young children is sight. From birth, babies are given brightly
                 coloured and patterned toys to look at and play with.
@@ -68,7 +73,9 @@
         </div>
         <h3 id="sound">Sound <i class="fas fa-assistive-listening-systems" aria-hidden="true"></i></h3>
         <div class="solid-pink">
-            <img src="./assets/images/play_by_sound.jpg" alt="a young girl holding up a home made tin and string phone to her ear" class="square_image play_by_pic">
+            <img src="./assets/images/play_by_sound.jpg"
+                alt="a young girl holding up a home made tin and string phone to her ear"
+                class="square_image play_by_pic">
             <p class="left-align">
 
 
@@ -81,7 +88,8 @@
         </div>
         <h3 id="smell">Smell <i class="fas fa-bacon" aria-hidden="true"></i></h3>
         <div class="solid-grey">
-            <img src="./assets/images/play_by_smell.jpg" alt="a young girl smelling a flower" class="square_image play_by_pic">
+            <img src="./assets/images/play_by_smell.jpg" alt="a young girl smelling a flower"
+                class="square_image play_by_pic">
             <p class="right-align">
 
 
@@ -92,7 +100,8 @@
         </div>
         <h3 id="touch">Touch <i class="fas fa-hand-sparkles" aria-hidden="true"></i></h3>
         <div class="solid-green">
-            <img src="./assets/images/play_by_touch.jpg" alt="a young girl playing with a bead and metal toy" class="square_image play_by_pic">
+            <img src="./assets/images/play_by_touch.jpg" alt="a young girl playing with a bead and metal toy"
+                class="square_image play_by_pic">
             <p class="left-align">
 
 
@@ -103,7 +112,8 @@
         </div>
         <h3 id="taste">Taste <i class="fas fa-grin-tongue" aria-hidden="true"></i></h3>
         <div class="solid-peach">
-            <img src="./assets/images/play_with_mum.jpg" alt="a young mum and her daughter sorting through drinking cups" class="square_image play_by_pic">
+            <img src="./assets/images/play_with_mum.jpg"
+                alt="a young mum and her daughter sorting through drinking cups" class="square_image play_by_pic">
             <p class="right-align">
 
 
@@ -117,6 +127,19 @@
     </section>
     <section>
         <h2 id="sec2" class="sections-headers">Play in Motion</h2>
+        <div class="solid-orange">
+            <p>
+                Watch this simple video about sensory play including
+                fun activities.
+            </p>
+            <br>
+            <iframe width="700" height="506" src="https://www.youtube.com/embed/GWBLyX7Is6Q"
+                title="YouTube video player" frameborder="0"
+                allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+
+
+        </div>
     </section>
     <section>
         <h2 id="sec3" class="sections-headers">Activities</h2>
@@ -134,9 +157,12 @@
         </div>
 
         <ul>
-            <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square" aria-hidden="true"></i></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square" aria-hidden="true"></i></a></li>
-            <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square" aria-hidden="true"></i></a></li>
+            <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"
+                        aria-hidden="true"></i></a></li>
+            <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"
+                        aria-hidden="true"></i></a></li>
+            <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"
+                        aria-hidden="true"></i></a></li>
         </ul>
 
     </footer>
