--- a/about.html
+++ b/about.html
@@ -137,12 +137,131 @@
                 title="YouTube video player" frameborder="0"
                 allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
-
-
         </div>
     </section>
     <section>
         <h2 id="sec3" class="sections-headers">Activities</h2>
+        <div class="solid-orange">
+            <p>
+                Let’s have some messy fun!
+
+                Sensory play is an extremely hands-on activity, which lets kids engage with their senses through the
+                exploration of different materials and textures through play. So you will never be short of ideas!
+                There
+                are a wide range of sensory play activities, which allow you to create a fun and flexible learning
+                space
+                in your early years setting.
+
+                Here are some fantastic ideas and activities for sensory play.
+            </p>
+        </div>
+        <h3 class="sections-headers">Top 10 Activities</h3>
+        <div id="top10_pane">
+            <img src="assets/images/play_dough.jpg" alt="a young boy holding play dough in his hands"
+                class=" square_image" id="play_dough_img">
+
+            <img src="assets/images/water_play.jpg" alt="a young boy holding up a hose pipe and spraying water"
+                class=" square_image" id="water_img">
+
+            <img src="assets/images/mud_play.jpg" alt="multiple hands playing in a pile of mud and covered in mud" class=" square_image" id="mud_img">
+
+            <div class="solid-blue activities_style">
+                <p>
+                    <em>Activity One: Making and Painting Homemade Salt Dough</em>
+                    <br>
+                    Simply combine salt, flour and water to create beautiful Salt Dough sculptures. Then get those
+                    Cutters
+                    and Rollers out to perfect your shapes – and add Glitter for an extra sparkle! Finally, pop your
+                    creations in the oven and once they are hardened, let the little ones paint them.
+                </p>
+            </div>
+            <div class="solid-pink activities_style">
+                <p>
+                    <em>Activity Two: Play Dough</em>
+                    <br>
+
+                    Cutting, squishing, rolling, and kneading. Soft Dough is perfect for stimulating sense of touch –
+                    toddlers will enjoy hours of soft dough fun!
+                </p>
+            </div>
+            <div class="solid-grey activities_style">
+                <p>
+                    <em>Activity Three: Kinetic Sand</em>
+                    <br>
+
+                    Mould, squeeze and build. Kinetic Sand flows through the fingers just like real sand – it’s that
+                    squeezable sand that you just can’t put down!
+                </p>
+            </div>
+            <div class="solid-green activities_style">
+                <p>
+                    <em>Activity Four: Shadow Puppets</em>
+                    <br>
+
+                    Create spectacular Shadow Puppets and let the little ones explore light and shade. Perfect for
+                    storytelling!
+                </p>
+            </div>
+            <div class="solid-peach activities_style">
+                <p>
+                    <em>Activity Five: Water Play</em>
+                    <br>
+
+                    Pouring, scooping, splashing and bubbles! Water Play is an exciting sensory play activity, where
+                    children become absorbed with the ripples of the water – try out a variety of water play games!
+                </p>
+            </div>
+            <div class="solid-blue activities_style">
+                <p>
+                    <em>Activity Six: Porridge Oats Construction</em>
+                    <br>
+                    Empty a box of porridge oats, or other cereals, into a Tuff Tray. Then add Toy Diggers & Trucks for
+                    scooping, driving, digging and burying! Create wonderful porridge oats constructions – your kids
+                    will
+                    have a blast.
+                </p>
+            </div>
+            <div class="solid-pink activities_style">
+                <p>
+                    <em>Activity Seven: Couscous Dinosaur Hunt</em>
+                    <br>
+
+                    Fill a large Tub with couscous and bury toy Dinosaurs inside it. Then ‘hunt’ for your dinosaurs
+                    using
+                    brushes in an exciting Fossil Hunt.
+                </p>
+            </div>
+            <div class="solid-grey activities_style">
+                <p>
+                    <em>Activity Eight: Make Pretend Snow</em>
+                    <br>
+
+                    Feel the snow crunch between your fingers! Fake Snow is really easy to make with flour and oil –
+                    simply
+                    mix together 8 cups of cornflour and 1 cup of vegetable oil.
+                </p>
+            </div>
+            <div class="solid-green activities_style">
+                <p>
+                    <em>Activity Nine: Homemade Paint Bags</em>
+                    <br>
+
+                    Fill zip lock bags with various coloured Paints and let the children enjoy squishing them and mixing
+                    the
+                    colours – without the mess!
+                </p>
+            </div>
+            <div class="solid-peach activities_style">
+                <p>
+                    <em>Activity Ten: Mud Pies</em>
+                    <br>
+
+                    Rustle up some fabulous sludgy treats and enjoy the sensory experience (and mess) of sticky, gloopy
+                    and
+                    hard mud!
+                </p>
+            </div>
+        </div>
     </section>
     <section>
         <h2 id="sec4" class="sections-headers">Help with Anxiety</h2>
