Add the help with anxiety section and style

--- a/about.html
+++ b/about.html
@@ -163,7 +163,8 @@
             <img src="assets/images/water_play.jpg" alt="a young boy holding up a hose pipe and spraying water"
                 class=" square_image" id="water_img">
 
-            <img src="assets/images/mud_play.jpg" alt="multiple hands playing in a pile of mud and covered in mud" class=" square_image" id="mud_img">
+            <img src="assets/images/mud_play.jpg" alt="multiple hands playing in a pile of mud and covered in mud"
+                class="square_image" id="mud_img">
 
             <div class="solid-blue activities_style">
                 <p>
@@ -265,6 +266,53 @@
     </section>
     <section>
         <h2 id="sec4" class="sections-headers">Help with Anxiety</h2>
+        <img src="assets/images/child_anxiety.jpg"
+            alt="a little girl in a red dress reflection of herself shows her in dark colours" id="anxiety_img">
+        <br>
+        <br>
+        <div class="solid-orange">
+            <p>
+                Anxiety in children can look like many things. It can look like anger, sadness, grumpiness, self-doubt,
+                or even a bad mood that your child can’t seem to shake. Big emotions like these are a normal part of
+                childhood as children are still developing emotion regulation. Most of the time, these big emotions will
+                come and go and kids bounce back happy to go on with their day.
+
+                But what about when the bad mood seems to stick, when your child can’t seem to stop worrying, or when
+                tantrums are frequent and intense? This can be an indication that your child is feeling some stress or
+                underlying anxiety.
+
+                A great way to help kids with anxiety is to bolster up their sense of self so they can distance
+                themselves from their feelings. One of the best ways to help kids re-center when they are feeling
+                worried or upset to engage them in sensory play that, but it’s very nature is immersive and mindful.
+            </p>
+        </div>
+        <h3 class="sections-headers">6 Mindful and Sensory Activities to Help Kids Regulate Emotions and Re-Centre</h3>
+        <div id="anxiety_pane">
+            <figure class="grid_figure"><img src="assets/images/scavenger_hunt.jpg" alt="a scavenger hunt map"
+                    class="anxiety_activity">
+                <figcaption>1. Sensory Scavenger Hunt.</figcaption>
+            </figure>
+            <figure class="grid_figure"><img src="assets/images/slime.jpg" alt="a greyscale hand squeezing orange slime"
+                class="anxiety_activity">
+            <figcaption>2. Aromatherapy Slime.</figcaption>
+        </figure>
+        <figure class="grid_figure"><img src="assets/images/play_water.jpg" alt="a little boy splashing through water"
+            class="anxiety_activity">
+        <figcaption>3. Play in Water.</figcaption>
+    </figure>
+            <figure class="grid_figure"><img src="assets/images/garden.jpg" alt="a little boy watering his garden"
+                    class="anxiety_activity">
+                <figcaption>4. Make a Sensory Garden.</figcaption>
+            </figure class="grid_figure">
+            <figure class="grid_figure"><img src="assets/images/glitter_jar.jpg"
+                    alt="a jar of gold glitter spilling onto the floor" class="anxiety_activity">
+                <figcaption>5. Make a Sensory Glitter Jar.</figcaption>
+            </figure>
+            <figure class="grid_figure"><img src="assets/images/colouring.jpg"
+                    alt="a box of colouring crayons with a blurred background" class="anxiety_activity">
+                <figcaption>6. Do some mindful colouring.</figcaption>
+            </figure>
+        </div>
     </section>
     <footer>
         <div id="footer-logo">
