Add tooltips and styling to anxiety activities section

--- a/about.html
+++ b/about.html
@@ -133,8 +133,7 @@
                 fun activities.
             </p>
             <br>
-            <iframe width="700" height="506" src="https://www.youtube.com/embed/GWBLyX7Is6Q"
-                title="YouTube video player" frameborder="0"
+            <iframe id="iframe" src="https://www.youtube.com/embed/GWBLyX7Is6Q" title="YouTube video player"
                 allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
@@ -288,29 +287,61 @@
         </div>
         <h3 class="sections-headers">6 Mindful and Sensory Activities to Help Kids Regulate Emotions and Re-Centre</h3>
         <div id="anxiety_pane">
-            <figure class="grid_figure"><img src="assets/images/scavenger_hunt.jpg" alt="a scavenger hunt map"
-                    class="anxiety_activity">
-                <figcaption>1. Sensory Scavenger Hunt.</figcaption>
+            <figure class="grid_figure">
+                <img src="assets/images/scavenger_hunt.jpg" alt="a scavenger hunt map" class="anxiety_activity">
+                <figcaption>
+                    <div class="tooltip">1. Sensory Scavenger Hunt.<span class="tooltiptext">A sensory scavenger hunt
+                            helps kids
+                            ground themselves in the things that they like to see, smell, feel, listen to, and
+                            taste.</span></div>
+                </figcaption>
             </figure>
             <figure class="grid_figure"><img src="assets/images/slime.jpg" alt="a greyscale hand squeezing orange slime"
-                class="anxiety_activity">
-            <figcaption>2. Aromatherapy Slime.</figcaption>
-        </figure>
-        <figure class="grid_figure"><img src="assets/images/play_water.jpg" alt="a little boy splashing through water"
-            class="anxiety_activity">
-        <figcaption>3. Play in Water.</figcaption>
-    </figure>
+                    class="anxiety_activity">
+                <figcaption>
+                    <div class="tooltip">2. Aromatherapy Slime.<span class="tooltiptext">Tactile activities are a great
+                            way to help kids become immersed in an activity. Make slime recipes multi-sensory by adding
+                            a bonus of calming aromatherapy oil.</span></div>
+                </figcaption>
+            </figure>
+            <figure class="grid_figure"><img src="assets/images/play_water.jpg"
+                    alt="a little boy splashing through water" class="anxiety_activity">
+                <figcaption>
+                    <div class="tooltip">3. Play in Water.<span class="tooltiptext">There is something about kids and
+                            water that
+                            just takes the bad mood away. Whether it is a sensory bath with glow sticks, playing in a
+                            baby pool, running through the sprinkler, or playing in the water table, anytime you add
+                            water to your child’s play it magically becomes immersive and mindful.</span>
+                    </div>
+                </figcaption>
+            </figure>
             <figure class="grid_figure"><img src="assets/images/garden.jpg" alt="a little boy watering his garden"
                     class="anxiety_activity">
-                <figcaption>4. Make a Sensory Garden.</figcaption>
+                <figcaption>
+                    <div class="tooltip">4. Make a Sensory Garden.<span class="tooltiptext">Gardening is known to
+                            provide a psychological boost by reducing stress and increasing positive emotions. One
+                            reason for this is because gardening lends itself to being in the moment and in a state of
+                            flow. Some research even shows that digging in dirt increases serotonin levels in the
+                            brain.</span></div>
+                </figcaption>
             </figure class="grid_figure">
             <figure class="grid_figure"><img src="assets/images/glitter_jar.jpg"
                     alt="a jar of gold glitter spilling onto the floor" class="anxiety_activity">
-                <figcaption>5. Make a Sensory Glitter Jar.</figcaption>
+                <figcaption>
+                    <div class="tooltip">5. Make a Sensory Glitter Jar.<span class="tooltiptext">These jars are
+                            naturally
+                            captivating and engaging. If your child is feeling upset, the glitter in the jar can
+                            represent “feeling all shook up.” Ask your child to shake up the jar and as it settles to
+                            take deep breaths. As the glitter settles in the jar, so do their feelings.</span></div>
+                </figcaption>
             </figure>
             <figure class="grid_figure"><img src="assets/images/colouring.jpg"
                     alt="a box of colouring crayons with a blurred background" class="anxiety_activity">
-                <figcaption>6. Do some mindful colouring.</figcaption>
+                <figcaption>
+                    <div class="tooltip">6. Do some mindful colouring.<span class="tooltiptext">Coloring is an activity
+                            that naturally lends itself to mindfulness. It is something you can do that is engaging, but
+                            that you don’t have to really think about, so you can be in the moment.</span></div>
+                </figcaption>
             </figure>
         </div>
     </section>
