add back to top page button and style

--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     </header>
     <section>
         <div id="about-menu">
-            <h1>All About Sensory Play</h1>
+            <h1 id="top">All About Sensory Play</h1>
             <nav id="sub-menu">
                 <ul>
                     <li><a href="#sec1">What is Sensory Play?</a></li>
@@ -115,15 +115,13 @@
             <img src="./assets/images/play_with_mum.jpg"
                 alt="a young mum and her daughter sorting through drinking cups" class="square_image play_by_pic">
             <p class="right-align">
-
-
                 Through the sense of taste children will get to explore new foods, fruits and vegetables and decide
                 which ones they like and do not like. Finger foods are a good way to encourage independence for toddlers
                 so that they can feed themselves. Cooking activities will encourage children to join in the process of
                 making meals and treats. They are more likely to try new things if they are involved in making and
                 preparing them.</p>
         </div>
-
+        <div class="contain-button"><button class="top-button"><a href="#top">Back to Top</a></button></div>
     </section>
     <section>
         <h2 id="sec2" class="sections-headers">Play in Motion</h2>
@@ -137,6 +135,7 @@
                 allow="accelerometer; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
         </div>
+        <div class="contain-button"><button class="top-button"><a href="#top">Back to Top</a></button></div>
     </section>
     <section>
         <h2 id="sec3" class="sections-headers">Activities</h2>
@@ -262,6 +261,7 @@
                 </p>
             </div>
         </div>
+        <div class="contain-button"><button class="top-button"><a href="#top">Back to Top</a></button></div>
     </section>
     <section>
         <h2 id="sec4" class="sections-headers">Help with Anxiety</h2>
@@ -344,6 +344,7 @@
                 </figcaption>
             </figure>
         </div>
+        <div id="contain-button-last"><button class="top-button"><a href="#top">Back to Top</a></button></div>
     </section>
     <footer>
         <div id="footer-logo">
