--- a/index.html
+++ b/index.html
@@ -14,65 +14,90 @@
 </head>
 
 <body>
-    <header>
-        <h1 id="logo"><a href="index.html">Play Eternal <i class="fas fa-hand-holding-heart"></i></a></h1>
+    <header id="header">
+        <h1 id="logo"><a href="index.html" href="javascript:void(0)">Play Eternal <i class="fas fa-hand-holding-heart"
+                    aria-hidden="true"></i></a>
+        </h1>
         <nav id="menu">
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li class="dropdown"><a href="javascript:void(0)" class="dropbtn">All About Sensory Play</a>
+                <li><a href="index.html" href="javascript:void(0)" class="active">Home</a></li>
+                <li class="dropdown"><a href="about.html" href="javascript:void(0)" class="dropbtn">All About
+                        Sensory Play</a>
                     <div class="dropdown-content">
-                        <a href="about.html#sec1">What is Sensory Play?</a>
-                        <a href="about.html#sec2">Play in Motion</a>
-                        <a href="about.html#sec3">Activities</a>
-                        <a href="about.html#sec4">Help with Anxiety</a>
+                        <a href="about.html#sec1" href="javascript:void(0)">What is Sensory Play?</a>
+                        <a href="about.html#sec2" href="javascript:void(0)">Play in Motion</a>
+                        <a href="about.html#sec3" href="javascript:void(0)">Activities</a>
+                        <a href="about.html#sec4" href="javascript:void(0)">Help with Anxiety</a>
                     </div>
 
                 </li>
-                <li><a href="feedback.html">Hear From Each Other</a></li>
-                <li><a href="contact.html">Contact Us</a></li>
+                <li><a href="feedback.html" href="javascript:void(0)">Hear From Each Other</a></li>
+                <li><a href="contact.html" href="javascript:void(0)">Contact Us</a></li>
             </ul>
         </nav>
+
     </header>
-    <section>
-        <div id="hero-area">
-            <div id="hero-text">
-                <h2 class="text-area">Help your child through play</h2>
-                <br>
-                <p class="text-area"> So many children are overwhelmed by the amount
-                    and variation of sensory stimuli in our everyday
-                    environments.</p>
-                <br>
-                <p class="text-area">
-                    By introducing some simple play time with your child
-                    you can help them meet their developmental goals
-                    as well as cope with any negative emotions they may
-                    be experiencing. Most of all they will have fun!</p>
-                <br>
-                <h3 class="text-area">What can I do as a parent?</h3>
-                <br>
-                <button class="text-area"><a href="about.html">Learn More</a></button>
+    <div class="content">
+        <section>
+            <div id="hero-area">
+                <div id="hero-text">
+                    <h2 class="text-area">Help your child through play</h2>
+                    <br>
+                    <p class="text-area"> So many children are overwhelmed by the amount
+                        and variation of sensory stimuli in our everyday
+                        environments.</p>
+                    <br>
+                    <p class="text-area">
+                        By introducing some simple play time with your child
+                        you can help them meet their developmental goals
+                        as well as cope with any negative emotions they may
+                        be experiencing. Most of all they will have fun!</p>
+                    <br>
+                    <h3 class="text-area">What can I do as a parent?</h3>
+                    <br>
+                    <button class="text-area"><a href="about.html">Learn More</a></button>
 
+                </div>
             </div>
-        </div>
-    </section>
-    <footer>
-        <div id="footer-logo">
-            <a href="index.html"><i class="fas fa-hand-holding-heart"></i>
-                <h6>Play Eternal</h6>
-            </a>
-            <br>
-            <p>Copyright@ClairePotter2021</p>
-        </div>
+        </section>
+        <footer>
+            <div id="footer-logo">
+                <a href="index.html"><i class="fas fa-hand-holding-heart"></i>
+                    <h6>Play Eternal</h6>
+                </a>
+                <br>
+                <p>Copyright@ClairePotter2021</p>
+            </div>
 
-        <ul>
-            <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
-            <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a></li>
-            <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
-        </ul>
-
+            <ul>
+                <li><a href="https://www.facebook.com/" target="_blank"><i class="fab fa-facebook-square"></i></a></li>
+                <li><a href="https://www.instagram.com/" target="_blank"><i class="fab fa-instagram-square"></i></a>
+                </li>
+                <li><a href="https://twitter.com/" target="_blank"><i class="fab fa-twitter-square"></i></a></li>
+            </ul>
+    </div>
     </footer>
     <!-- font awesome script-->
     <script src="https://kit.fontawesome.com/bd9c348b33.js" crossorigin="anonymous"></script>
+
+    <!--javascript from W3 for sticky nav bar-->
+
+    <script>
+        window.onscroll = function () {
+            myFunction()
+        };
+
+        var header = document.getElementById("header");
+        var sticky = header.offsetTop;
+
+        function myFunction() {
+            if (window.pageYOffset >= sticky) {
+                header.classList.add("sticky")
+            } else {
+                header.classList.remove("sticky");
+            }
+        }
+    </script>
 </body>
 
 </html>
