--- a/index.html
+++ b/index.html
@@ -54,12 +54,10 @@
                         be experiencing. Most of all they will have fun!</p>
                     <br>
                     <h3 class="text-area">What can I do as a parent?</h3>
-                    <br>
-                    <button class="text-area"><a href="about.html">Learn More</a></button>
-
                 </div>
+            </section>
             </div>
-        </section>
+            <button id="learn-more"><a href="about.html">Learn More</a></button>
         <footer>
             <div id="footer-logo">
                 <a href="index.html"><i class="fas fa-hand-holding-heart"></i>
